# hibridon

./: ._CONFIG_APPLE_G4_G5  ._CONFIG_APPLE_INTEL  ._CONFIG_APPLE_INTEL_64  ._CONFIG_X86_INTEL_MKL  ._CONFIG_X86_PGF95_ACML  ._LICENSE  ._README_4.2  ._README_4.2.1  ._README_4.3  ._ReleaseNotes  ._bin  ._changes.txt  ._compare.com  ._compare_OSX  ._compatability  ._doc  ._runtest_ch3he  ._src  ._tests  ._timing  ._utilities  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONFIG  CONFIG.BAK  CONFIG_20170515  CONFIG_APPLE_64_COMPOSER_2011_5  CONFIG_APPLE_64_IFORT11  CONFIG_APPLE_64_INTEL_12.0.0  CONFIG_APPLE_G4_G5  CONFIG_APPLE_INTEL  CONFIG_APPLE_INTEL_64  CONFIG_DEEPTHOUGHT  CONFIG_IFort_20180731  CONFIG_LINUX64v3_IFORT12  CONFIG_MARCC  CONFIG_MARCC_KLOS  CONFIG_MARCC_PJD  (+37 more)
lib/: CMakeLists.txt  CMakelists.txt  ancou.F90  assert.f90  command.F90  command.inc.F90  grovec_imp.F90  grovec_type.F90  hiamp.F90  hibasis.F90  hibasutil.F90  hiblas.F90  hibound.F90  hibrid1.F90  hibrid2.F90  hibrid3.F90  hibrid4.F90  hibrid5.F90  hibridon.F90  hibuser.inc.F90  hicommands.F90  hicommon.F90  hidifcrs.F90  hiflow.F90  hihypxsc.F90  hiiolib_f.F90  himatrix.F90  himem.F90  hinput.F90  hiparam_array.F90.inc  hiparams.F90  hiparcst.F90  hipot.F90  hipotutil.F90  hiprsbr.F90  hismat.F90  histmix.F90  hisystem.F90  hitensor.F90  hitestptn.F90  (+9 more)
lib/bases/: hiba01_1sg.F90  hiba02_2sg.F90  hiba03_2pi.F90  hiba04_sgpi.F90  hiba05_pi.F90  hiba06_stp.F90  hiba07_13p.F90  hiba08_2mol.F90  hiba09_stpln.F90  hiba10_22p.F90  hiba11_1del.F90  hiba12_h2p.F90  hiba13_h3p.F90  hiba14_2del.F90  hiba15_diat2p.F90  hiba16_astp.F90  hiba17_ch2x.F90  hiba18_stp1.F90  hiba19_sgpi1.F90  hiba20_2pi1sg.F90  hiba21_stp1sg.F90  hiba22_1d3p.F90  hiba23_3p2s.F90  hiba24_sphtp.F90  hiba25_1sg1sg.F90  hiba26_2sg1sg.F90  hiba27_astp1.F90  hiba28_3sg1sg.F90  hiba29_astp2.F90  hiba30_astp3.F90
lib/basis/: hiba00_dummy.F90  hiba01_1sg.F90
lib/common/: bausr.F90  ground.F90  logdef.F90  parbas.F90  parbasl.F90  parsys_mod.F90  syusr.F90
lib/generic/: grovec.F90
lib/hypxsc/: hyp_checks.F90  hyp_levels.F90  hyp_smat.F90  hyp_spins.F90  hypxsc.F90
src/unittests/: CMakeLists.txt  ancou.F90  commands.F90  grovec.F90  log.F90  param_group.F90  v2.F90
tests/: ._Arn2.fluxinp  ._Arn2_dxsec.inp  ._Arn2_rstest.inp  ._Arn2_test.inp  ._Arno_tes1.dcs  ._Arno_tes1.ics  ._Arno_tes1.xsc  ._Arno_test.inp  ._Aroh_jatest.inp  ._Aroh_new1.ics  ._Aroh_new1.psc  ._Aroh_new1.xsc  ._Aroh_new1.xxsc  ._Boh2_bound.inp  ._Cc.flx  ._Cc.psi  ._Ccbrstest1.ics  ._Ccbrstest1.pcs  ._Ccbrstest1.psc  ._Ccbrstest1.xsc  ._Ccbtest1.ics  ._Ccbtest1.pcs  ._Ccbtest1.psc  ._Ccbtest1.xsc  ._Ccdxsec1.dcs  ._Ccdxsec1.xxsc  ._Ccrstest1.ics  ._Ccrstest1.pcs  ._Ccrstest1.psc  ._Ccrstest1.xsc  ._Cctest1.ics  ._Cctest1.pcs  ._Cctest1.psc  ._Cctest1.xsc  ._Ch3he1.ics  ._Ch3he_test.inp  ._Ch3i.inp  ._Ch3itest.flx  ._Ch3itest.psi  ._Csbtest1.ics  (+130 more)
tests/BASTST/: Bastst_01.inp  Bastst_01.out  Bastst_02.inp  Bastst_02.out  Bastst_03.inp  Bastst_03.out  Bastst_04.inp  Bastst_04.out  Bastst_05.inp  Bastst_05.out  Bastst_07.inp  Bastst_07.out  Bastst_08.inp  Bastst_08.out  Bastst_09.inp  Bastst_09.out  Bastst_10.inp  Bastst_10.out  Bastst_11.inp  Bastst_11.out  Bastst_12.inp  Bastst_12.out  Bastst_13.inp  Bastst_13.out  Bastst_14.inp  Bastst_14.out  Bastst_15.inp  Bastst_15.out  Bastst_16.inp  Bastst_16.out  Bastst_17.inp  Bastst_17.out  Bastst_18.inp  Bastst_18.out  Bastst_19.inp  Bastst_19.out  Bastst_20.inp  Bastst_20.out  Bastst_21.inp  Bastst_21.out  (+80 more)
tests/HYPXSC/: CMakeLists.txt  Hypxsc_atom-molecule-1spin1.hfx  Hypxsc_atom-molecule-1spin1.smt  Hypxsc_atom-molecule-2spins1.hfx  Hypxsc_atom-molecule-2spins1.smt  Hypxsc_molecule-molecule-1spin1.hfx  hypxsc_atom-molecule-1spin.com  hypxsc_atom-molecule-2spins.com  hypxsc_molecule-molecule-1spin.com  pot_hypxsc.F90
tests/arch4/: Arch4_aq.inp  Arch4q1.xxsc  CMakeLists.txt  Job1.xxsc  Saveq1.inp  arch4.cmake  hibautotest.conf  pot_arch4.F  pot_arch4.F90  test_arch4.com  test_arch4_quick.com
tests/arn2/: Arn2.fluxinp  Arn2_dxsec.inp  Arn2_hyp.inp  Arn2_hyp1.hfx  Arn2_test.inp  CMakeLists.txt  Ccdxsec1.xxsc  Ccrstest1.ics  Cctest1.ics  Cstest1.ics  Mltien1.ics  arn2.cmake  arn2_hyp_test.com  pot_arn2.F  pot_arn2.F90
tests/arn2_big/: CMakeLists.txt  Ccbrstest1.ics  Ccbrstest1.pcs  Ccbrstest1.psc  Ccbrstest1.xsc  Ccbtest1.ics  Ccbtest1.pcs  Ccbtest1.psc  Csbtest1.ics  arn2_big.cmake  pot_arn2.F  pot_arn2.F90
tests/arno/: Arno_tes1.ics  Arno_tes1.xsc  Arno_tes2.ics  Arno_tes3.ics  Arno_test.inp  CMakeLists.txt  arno.cmake  arno.stdout  pot_arno.F  pot_arno.F90
tests/arno_bound/: Arno.inp  CMakeLists.txt  Jmax10.evl  Jmax2.evl  Jmax3.evl  Jmax8.evl  arno_bound.cmake  arno_bound.com  hibautotest.conf  pot_arno_ccsdt.F  pot_arno_ccsdt.F90
tests/aroh/: Aroh_jatestq.inp  Aroh_new1.ics  Aroh_new1.psc  Aroh_new1.xxsc  Aroh_q1.ics  CMakeLists.txt  aroh.cmake  aroh_jatest_quick.com  hibautotest.conf  pot_arohx_ump4.F  pot_arohx_ump4.F90
tests/boh2/: Boh2_b2a.evl  Boh2_b2b.evl  Boh2_bou.evl  Boh2_bound.inp  CMakeLists.txt  boh2.cmake  boh2_b.com  boh2_b2.com  boh2_test.com  hibautotest.conf  pot_boh2.F  pot_boh2.F90
tests/boh2_bound/: Boh2_bou.evl
tests/c2hh2/: C2hh2q1.xxsc  C2hoh2.inp  C2hoh2_long.inp  C2hoh2_long1.ics  C2hoh2_long1.xxsc  C2hoh2q.inp  CMakeLists.txt  Job1.xxsc  c2hh2.cmake  c2hh2_long.stdout  c2hh2_quick.stdout  hibautotest.conf  pot_c2hh2_12_6.F  pot_c2hh2_12_6.F90  test_c2hh2_long.com  test_c2hh2_quick.com
tests/ca3phe/: Ca3phe.inp  ca3phe.cmake  ca3phe_test.com
tests/cahe/: CMakeLists.txt  Cahe_test.inp  Job1.ics  Nologdprop1.ics  Nologdprop_test.inp  cahe.cmake  cahe_test.com  nologdprop_test.com  pot_cahe.F  pot_cahe.F90
tests/ch2he/: CMakeLists.txt  Ch2_p1.ics  Ch2_pq1.ics  Ch2_pq1.smt  Ch2_pq1.xsc  Ch2x_p1.ics  Ch2x_p1.smt  Ch2x_pq1.hfx  Ch2x_pq1.ics  Ch2x_pq1.smt  Ch2x_pq1.xsc  ch2ahe_stmixtst_quick.com  ch2he.cmake  ch2he_stmix.stdout  ch2he_x.stdout  ch2he_x_quick.stdout  ch2xhe_stmixtst_quick.com  hibautotest.conf  pot_ch2he_a190_c20.F  pot_ch2he_a190_c20.F90  pot_ch2he_x52_c20_v3.F  (+1 more)
(+2153 files in other folders)
